k8s/raw-manifests/dev/pharma-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharma-ui
  namespace: dev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: pharma-ui
